--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,6 +7,7 @@
 		"start": "node dist/index.js"
 	},
 	"dependencies": {
+		"@socialyze/shared": "workspace:*",
 		"cors": "2.8.5",
 		"dotenv": "16.4.1",
 		"express": "5.1.0",
