--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@socialyze/shared": "workspace:*",
 		"@auth0/auth0-react": "2.2.4",
 		"axios": "1.9.0",
 		"next": "15.3.2",
@@ -22,6 +23,7 @@
 		"autoprefixer": "^10.4.21",
 		"eslint": "^8",
 		"eslint-config-next": "14.1.0",
+		"next-transpile-modules": "^10.0.1",
 		"postcss": "^8.5.3",
 		"tailwindcss": "^3.4.17",
 		"typescript": "^5"
