--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
 		"forceConsistentCasingInFileNames": true,
 		"baseUrl": ".",
 		"paths": {
-			"@shared/*": ["packages/shared/src/*"],
+			"@shared/*": ["packages/shared/dist/*"],
 			"@api/*": ["apps/api/src/*"],
 			"@web/*": ["apps/web/src/*"]
 		}
