--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -13,6 +13,8 @@
 		"express": "5.1.0",
 		"jsonwebtoken": "9.0.2",
 		"mongoose": "8.15.0",
+		"pino": "^9.7.0",
+		"pino-pretty": "^13.0.0",
 		"zod": "3.22.4"
 	},
 	"devDependencies": {
@@ -20,6 +22,7 @@
 		"@types/express": "4.17.21",
 		"@types/jsonwebtoken": "9.0.5",
 		"@types/node": "20.11.19",
+		"@types/pino": "^7.0.5",
 		"tsx": "4.19.4"
 	}
 }
