--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.27.0",
+		"@typescript-eslint/eslint-plugin": "^8.32.1",
+		"@typescript-eslint/parser": "^8.32.1",
 		"eslint": "^8.57.1",
 		"eslint-config-prettier": "^10.1.5",
 		"eslint-plugin-react": "^7.37.5",
