--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"build": "pnpm --recursive build",
 		"lint": "pnpm --recursive lint",
 		"type-check": "pnpm --recursive type-check",
-		"format": "prettier --write ."
+		"format": "prettier --write .",
+		"prepare": "husky"
 	},
 	"devDependencies": {
 		"@eslint/js": "^9.27.0",
@@ -15,6 +16,7 @@
 		"eslint": "^8.57.1",
 		"eslint-config-prettier": "^10.1.5",
 		"eslint-plugin-react": "^7.37.5",
+		"husky": "^9.1.7",
 		"prettier": "3.2.5",
 		"prettier-plugin-tailwindcss": "^0.6.11",
 		"typescript": "5.3.3",
