--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -12,6 +12,7 @@
 		"dotenv": "16.4.1",
 		"express": "5.1.0",
 		"jsonwebtoken": "9.0.2",
+		"mongodb": "^6.16.0",
 		"mongoose": "8.15.0",
 		"pino": "^9.7.0",
 		"pino-pretty": "^13.0.0",
