--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,6 +7,8 @@
 		"start": "node dist/index.js"
 	},
 	"dependencies": {
+		"@aws-sdk/client-s3": "^3.817.0",
+		"@aws-sdk/s3-request-presigner": "^3.817.0",
 		"@socialyze/shared": "workspace:*",
 		"cors": "2.8.5",
 		"dotenv": "16.4.1",
