--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,7 +4,8 @@
 	"scripts": {
 		"dev": "node --import tsx --watch src/index.ts",
 		"build": "tsc",
-		"start": "node dist/index.js"
+		"start": "node dist/index.js",
+		"test": "vitest"
 	},
 	"dependencies": {
 		"@aws-sdk/client-s3": "^3.817.0",
@@ -18,6 +19,8 @@
 		"mongoose": "8.15.0",
 		"pino": "^9.7.0",
 		"pino-pretty": "^13.0.0",
+		"supertest": "^7.1.1",
+		"vitest": "^3.1.4",
 		"zod": "3.22.4"
 	},
 	"devDependencies": {
@@ -26,6 +29,7 @@
 		"@types/jsonwebtoken": "9.0.5",
 		"@types/node": "20.11.19",
 		"@types/pino": "^7.0.5",
+		"mongodb-memory-server": "^10.1.4",
 		"tsx": "4.19.4"
 	}
 }
