--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -29,6 +29,7 @@
 		"@types/jsonwebtoken": "9.0.5",
 		"@types/node": "20.11.19",
 		"@types/pino": "^7.0.5",
+		"@types/supertest": "^6.0.3",
 		"mongodb-memory-server": "^10.1.4",
 		"tsx": "4.19.4"
 	}
