--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -20,10 +20,7 @@ jobs:
     lint-and-test:
         runs-on: ubuntu-latest
         env:
-            DB_URI: ${{ secrets.DB_URI }}
-            AUTH0_DOMAIN: ${{ secrets.AUTH0_DOMAIN }}
-            AUTH0_CLIENT_ID: ${{ secrets.AUTH0_CLIENT_ID }}
-            AUTH0_CLIENT_SECRET: ${{ secrets.AUTH0_CLIENT_SECRET }}
+            JWT_SECRET: ${{ secrets.JWT_SECRET }}
         defaults:
             run:
                 working-directory: ./apps/api
