--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,13 +5,14 @@
 		"dev": "node --import tsx --watch src/index.ts",
 		"build": "tsc",
 		"start": "node dist/index.js",
-		"test": "vitest",
+		"test": "vitest run --config vitest.config.ts",
 		"lint": "eslint 'src/**' 'tests/**' --max-warnings=0",
-		"test": "vitest run --config vitest.config.ts"
+		"seed:fake-users": "pnpm exec ts-node src/scripts/fakeUsers.ts"
 	},
 	"dependencies": {
 		"@aws-sdk/client-s3": "^3.817.0",
 		"@aws-sdk/s3-request-presigner": "^3.817.0",
+		"@faker-js/faker": "^9.8.0",
 		"@socialyze/shared": "workspace:*",
 		"cors": "2.8.5",
 		"dotenv": "16.4.1",
@@ -33,6 +34,7 @@
 		"@types/pino": "^7.0.5",
 		"@types/supertest": "^6.0.3",
 		"mongodb-memory-server": "^10.1.4",
+		"ts-node": "^10.9.2",
 		"tsx": "4.19.4"
 	}
 }
