--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,8 +9,8 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
-		"@socialyze/shared": "workspace:*",
 		"@auth0/auth0-react": "2.2.4",
+		"@socialyze/shared": "workspace:*",
 		"axios": "1.9.0",
 		"next": "15.3.2",
 		"react": "^18.3.1",
@@ -25,6 +25,7 @@
 		"eslint-config-next": "14.1.0",
 		"next-transpile-modules": "^10.0.1",
 		"postcss": "^8.5.3",
+		"tailwind-scrollbar": "^4.0.2",
 		"tailwindcss": "^3.4.17",
 		"typescript": "^5"
 	}
