--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,7 +7,8 @@
 		"start": "node dist/index.js",
 		"test": "vitest run --config vitest.config.ts",
 		"lint": "eslint 'src/**' 'tests/**' --max-warnings=0",
-		"seed:fake-users": "pnpm exec ts-node src/scripts/fakeUsers.ts"
+		"seed:fake-users": "pnpm exec ts-node src/scripts/fakeUsers.ts",
+		"seed:fake-posts-with-comments": "pnpm exec ts-node src/scripts/fakePostsWithComments.ts"
 	},
 	"dependencies": {
 		"@aws-sdk/client-s3": "^3.817.0",
