--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
 		"@auth0/auth0-react": "2.2.4",
 		"@socialyze/shared": "workspace:*",
 		"axios": "1.9.0",
+		"browser-image-compression": "^2.0.2",
 		"next": "15.3.2",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1"
