--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"scripts": {
 		"dev": "node --import tsx --watch src/index.ts",
-		"build": "tsc",
+		"build": "tsc && tsc-alias",
 		"start": "node dist/index.js",
 		"test": "vitest run --config vitest.config.ts",
 		"lint": "eslint 'src/**' 'tests/**' --max-warnings=0",
@@ -36,6 +36,7 @@
 		"@types/supertest": "^6.0.3",
 		"mongodb-memory-server": "^10.1.4",
 		"ts-node": "^10.9.2",
+		"tsc-alias": "^1.8.16",
 		"tsx": "4.19.4"
 	}
 }
