--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -1,12 +1,13 @@
 {
 	"extends": "../../tsconfig.json",
 	"compilerOptions": {
+		"module": "CommonJS",
+		"target": "ES2020",
+		"outDir": "dist",
 		"outDir": "dist",
 		"declaration": true,
 		"declarationMap": true,
 		"moduleResolution": "node",
-		"module": "ESNext",
-		"target": "ES2022",
 		"esModuleInterop": true,
 		"skipLibCheck": true,
 		"strict": true
