--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,9 @@
 	},
 	"dependencies": {
 		"@auth0/auth0-react": "2.2.4",
+		"@fortawesome/fontawesome-svg-core": "^6.7.2",
+		"@fortawesome/free-solid-svg-icons": "^6.7.2",
+		"@fortawesome/react-fontawesome": "^0.2.2",
 		"@socialyze/shared": "workspace:*",
 		"axios": "1.9.0",
 		"browser-image-compression": "^2.0.2",
