--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,7 +27,6 @@ jobs:
                   ssh ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} << 'EOF'
                     set -e
 
-                    # Path to your app on the server
                     APP_DIR=/var/www/socialyze
 
                     if [ ! -d "$APP_DIR" ]; then
@@ -37,22 +36,30 @@ jobs:
 
                     cd $APP_DIR
 
+                    echo ">> Stopping all PM2 apps (if any)..."
+                    pm2 stop all || echo "No PM2 processes to stop"
+
+                    echo ">> Pulling latest code..."
                     git pull origin main
 
+                    echo ">> Setting up pnpm..."
                     corepack enable
                     corepack prepare pnpm@latest --activate
 
+                    echo ">> Installing dependencies..."
                     pnpm install --frozen-lockfile
 
+                    echo ">> Building shared package..."
                     pnpm --filter shared build || (echo "Shared build failed" && exit 1)
 
-                    # Build apps
+                    echo ">> Building frontend..."
                     pnpm --filter web build || (echo "Web build failed" && exit 1)
+
+                    echo ">> Building backend..."
                     pnpm --filter api build || (echo "API build failed" && exit 1)
 
-                    # Use PM2 to start or restart the apps
+                    echo ">> Restarting PM2 apps..."
                     pm2 start ecosystem.config.js --env production || pm2 restart ecosystem.config.js --env production || (echo "PM2 failed" && exit 1)
 
-                    # Save PM2 process list (for startup on reboot)
                     pm2 save
                   EOF
